# derive_static_str

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: integration_test.rs
